--- a/b4/cssPhuctap.html
+++ b/b4/cssPhuctap.html
@@ -67,5 +67,9 @@
         <p><input type="button" value="Đăng nhập"></p>
     </form>
 
+    <div style="line-height: 2;border: 1px solid gray;">
+        Chào cả nhà sử dụng line-height: 1.5
+    </div>
+
 </body>
 </html>
